Fixed spacing between nav-links

--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,7 @@ a:hover {
     text-decoration: none;
     font-size: 1.3em;
     font-weight: 500;
-    margin-right: 5vw;
+    margin-right: 40px;
     display: inline-block;
 }
 
